overlays/dev/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollout-demo2
spec:
  template:
    spec:
      containers:
        - name: app
          image: argoproj/rollouts-demo:green
